fix for really bad speellinng and full name on mobile

--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -6,4 +6,9 @@ header {
   .donate {
     float: right;
   }
+
+  .header-title {
+    padding-top: 1em;
+    font-size: 1.5em
+  }
 }
